hphp/hack/test/typecheck/trait_const.php.exp
File "trait_const.php", line 4, characters 3-15:
Traits cannot have constants (Parsing[1002])
