hphp/hack/test/typecheck/trait_const.php
<?hh

trait T {
  const X = "a";
}
